--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -69,10 +69,15 @@
             width: 49%;
 
             &.max-width-input {
-                width: 100%;
+                width: 99.3%;
             }
 
-            input {
+            &.width-iput-3 {
+                width: 32.3%;
+            }
+
+            input,
+            select {
                 border-radius: 3px;
                 height: 30px;
                 border: 1px solid grey;
