--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -66,7 +66,7 @@
                 }
 
                 &.section-outstanding-doctor {
-                    background-image: url('../../assets/outStanding-doctor/103447-bs-hong-anh.jpg');
+                    // background-image: url('../../assets/outStanding-doctor/103447-bs-hong-anh.jpg');
                     width: 120px;
                     height: 120px;
                     border-radius: 50%;
