--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -7,22 +7,19 @@
 
     .detail-container {
 
-        // height: 120px;
         .detail-top {
             display: flex;
 
             .detail-top-left {
                 width: 120px;
-                height: 120px;
+                height: 110px;
                 border-radius: 50%;
                 background: center center no-repeat;
                 margin: 0 20px;
             }
 
             .detail-top-right {
-                // width: calc(100%-120px);
                 width: 95%;
-                // border: 1px solid blue;
                 padding-left: 20px;
                 padding-top: 10px;
 
@@ -35,6 +32,7 @@
         }
 
         .detail-bottom {
+            margin-top: 20px;
             padding-top: 50px;
             background-color: #eceaea;
 
@@ -43,9 +41,10 @@
     }
 
     .Schedule-doctor {
-        margin: 50px 0;
+        margin: 0 100px;
         display: flex;
-        height: 200px;
+        padding: 10px 0;
+        min-height: 200px;
         // border: 1px solid red;
 
         .content-left {
