--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,5 +1,5 @@
 .doctor-schedule-container {
-    border-right: 1px solid red;
+    border-right: 1px solid rgb(221, 219, 219);
     height: 100%;
 
     .all-schedule {
