--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -62,7 +62,7 @@
                 background-color: #eee;
 
                 &.section-specialty {
-                    background-image: url('../../assets/specialty/101713-tai-mui-hong.png');
+                    // background-image: url('../../assets/specialty/101713-tai-mui-hong.png');
                 }
 
                 &.section-medical-facility {
