--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,9 +1,8 @@
 .detail-container {
 
     .detail-specialty-top {
-        margin: 0 150px;
+        padding: 0 150px;
         min-height: 200px;
-        border: 1px solid orange;
     }
 
     .provice-select {
@@ -45,6 +44,15 @@
                     padding-top: 10px;
                 }
             }
+        }
+
+        .no-doctor {
+            display: block;
+            text-align: center;
+            font-size: 20px;
+            line-height: 200px;
+            font-weight: 600;
+            color: red;
         }
     }
 }
