--- a/src/containers/HomePage/Section/MedicalFacility.scss
+++ b/src/containers/HomePage/Section/MedicalFacility.scss
@@ -1,1 +1,22 @@
+.section-medical-facility {
+    .section-container {
+        .section-header {
+            .btn-section {}
+        }
 
+        .section-body {
+            .section-customize {
+                cursor: pointer;
+            }
+
+            .section-name {
+                padding-top: 10px;
+                max-width: 278px;
+
+                &:hover {
+                    color: rgb(0, 119, 255);
+                }
+            }
+        }
+    }
+}
