--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -66,7 +66,7 @@
                 }
 
                 &.section-medical-facility {
-                    background-image: url('../../assets/medical-facility/085056logobenhvien108.jpg');
+                    // background-image: url('../../assets/medical-facility/085056logobenhvien108.jpg');
                 }
 
                 &.section-outstanding-doctor {
