--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -1,3 +1,12 @@
+div._loading_overlay_wrapper {
+    position: unset;
+
+    ._loading_overlay_overlay {
+        z-index: 10000;
+    }
+}
+
+
 .manage-patient-container {
     margin: 0 150px;
 
